2007-07-02 Tim
 PATCH: [ 1746188 ] Web: Move "Downloads" page to own tab
  Web: .htaccess page.inc sitemap.txt deleted downloads.php
  Web\downloads: new file index.php

2007-06-27 Tim
 Use nicer Wiki URLs.
  Web: .htaccess

2007-06-19 Tim
 PATCH: [ 1739404 ] Web: Move buttons to right corner
  Web: page.inc
  Web\css: print.css screen.css
  Web\developer: deleted sourceforge.png valid-css.gif valid-html401.gif
 PATCH: [ 1739980 ] Web: Changes for new stable release 2.6.8
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2007-06-17 Tim
 PATCH: [ 1738750 ] Web: Use Eric Meyer's tabbed navbar
  Web: page.inc
  Web\css: screen.css

2007-06-13
 PATCH: [ 1734072 ] Upgrade website to PHP 5
  Web: .htaccess

2007-06-02 Tim
 Use more flexible SF.net URL for tracker shortcuts.
  Web: .htaccess

2007-05-12 Tim
 Remove unneeded CSS rule from tabs code.
  Web\css: screen.css

2007-05-10 Tim
 PATCH: [ 1714596 ] Web: Rename "Users" tab to "Home"
  Web: downloads.php index.php links.php page.inc WinMergePAD.php
 Rename constant WINMERGE_SUP to TAB_SUPPORT.
  Web: page.inc
  Web\support: index.php mailing-lists.php tracker-shortcuts.php

2007-05-07 Tim
 Rename function setVersion() to setTab().
  Web: page.inc
 Fix wrong tab from WinMerge 2.2 download page.
  Web\2.2: downloads.php
 Fix the double "This is an old version" info for WinMerge 2.2 amd 2.4.
  Web\2.2: downloads.php
  Web\2.4: downloads.php

2007-04-25 Tim
 RFE: [ 1700099 ] Web: Mailing list page?
  Web: page.inc sitemap.txt
  Web\support: new file mailing-lists.php

2007-04-14 Tim
 PATCH: [ 1700349 ] Web: Move developers area to Wiki
  Web: .htaccess index.php page.inc sitemap.txt
  Web\developer: deleted *.*

2007-04-11 Tim
 PATCH: [ 1697984 ] Web: Move tracker shortcuts creator to support
  Web: .htaccess sitemap.txt
  Web\developer: deleted tracker-shortcuts.php
  Web\support: new file tracker-shortcuts.php

2007-04-02 Tim